# chaining_demo

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md
chaining_controller/: CMakeLists.txt  chained_controller.xml  effort_controller_upper.xml  package.xml
chaining_controller/config/: cartpole_controller_effort.yaml
chaining_controller/examples/: example_diff_drive.cpp  example_effort.cpp  example_gripper.cpp  example_position.cpp  example_tricycle_drive.cpp  example_velocity.cpp
chaining_controller/include/chaining_controller/: chained_controller.hpp  effort_controller.hpp  visibility_control.h
chaining_controller/launch/: cart_example_effort.launch.py  cart_example_position.launch.py  cart_example_velocity.launch.py  diff_drive.launch.py  gripper_mimic_joint_example.launch.py  tricycle_drive.launch.py
chaining_controller/src/: chained_controller.cpp  effort_controller.cpp
chaining_controller/urdf/: test_cart_effort.xacro.urdf  test_cart_position.xacro.urdf  test_cart_velocity.xacro.urdf  test_diff_drive.xacro.urdf  test_gripper_mimic_joint.xacro.urdf  test_tricycle_drive.xacro.urdf
gazebo_ros2_control/: package.xml
gazebo_ros2_control/include/gazebo_ros2_control/: gazebo_system.hpp  gazebo_system_interface.hpp
gazebo_ros2_control/src/: gazebo_ros2_control_plugin.cpp  gazebo_system.cpp
